Fix alignment of entry cards

--- a/src/components/EntryListing/EntryListing.css
+++ b/src/components/EntryListing/EntryListing.css
@@ -4,6 +4,7 @@
   max-height: 290px;
   width: 240px;
   cursor: pointer;
+  margin-left: 15px;
 }
 
 .cardImage {
@@ -17,5 +18,5 @@
 .cardsGrid {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  margin-left: -15px;
 }
